--- a/WebContent/css/Vorstand.css
+++ b/WebContent/css/Vorstand.css
@@ -51,3 +51,29 @@
 	width: 100% !important;
 }
 
+	textarea{
+	width:100%;
+	min-height: 250px;
+	
+}
+
+
+.PostsBox ul{
+	margin: 0px;
+	padding: 0px;
+}
+
+.PostsBox ul li{
+	margin: 0px;
+	padding: 15px;
+	list-style-position: inside;
+	margin: 5px;
+	background-color: #ddd;
+	border: 1px solid #ccc;
+}
+
+
+.panel{
+	margin-top: 15px;
+}
+
